netcfg (1.74) UNRELEASED; urgency=low

  * Team upload

  [ Sorina Sandu ]
  * Make link detection timeout preseedable.
    (Closes: #610752)

 -- Gaudenz Steinlin <gaudenz@debian.org>  Wed, 20 Jun 2012 14:21:05 +0200

netcfg (1.73) unstable; urgency=low

  * Team upload

  [ Updated translations ]
  * Croatian (hr.po) by Tomislav Krznar

 -- Christian Perrier <bubulle@debian.org>  Tue, 19 Jun 2012 08:00:34 +0200

netcfg (1.72) unstable; urgency=low

  * Team upload
  * Replace XC-Package-Type by Package-Type

  [ Updated translations ]
  * Amharic (am.po) by Tegegne Tefera

 -- Christian Perrier <bubulle@debian.org>  Mon, 18 Jun 2012 06:53:23 +0200

netcfg (1.71) unstable; urgency=low

  * Team upload

  [ Robert Millan ]
  * Ignore pfsync0, pflog0 and usbus0 devices on GNU/kFreeBSD.
  * Use 127.0.1.1 hack in /etc/hosts only on kernels that support it.
    (Closes: #649747)

  [ Samuel Thibault ]
  * Also probe /dev/eth* and wl* on hurd-i386.

  [ Sorina Sandu ]
  * Fix debconf backup capability handling.
    (Closes: #636211)

  [ Aurelien Jarno ]
  * Add ppc64 to the Architecture field.

  [ Updated translations ]
  * Amharic (am.po) by Tegegne Tefera
  * Arabic (ar.po) by Ossama Khayat
  * Asturian (ast.po) by Mikel González
  * Bulgarian (bg.po) by Damyan Ivanov
  * Bengali (bn.po) by Ayesha Akhtar
  * Tibetan (bo.po) by Tennom
  * Catalan (ca.po) by Jordi Mallach
  * Welsh (cy.po) by Dafydd Tomos
  * Danish (da.po) by Joe Hansen
  * German (de.po) by Holger Wansing
  * Greek, Modern (1453-) (el.po) by galaxico
  * Estonian (et.po) by Mattias Põldaru
  * Basque (eu.po) by Piarres Beobide
  * Finnish (fi.po) by Timo Jyrinki
  * Galician (gl.po) by Jorge Barreiro
  * Hebrew (he.po) by Omer Zak
  * Hungarian (hu.po) by SZERVÁC Attila
  * Indonesian (id.po) by Mahyuddin Susanto
  * Icelandic (is.po) by Sveinn í Felli
  * Italian (it.po) by Milo Casagrande
  * Central Khmer (km.po) by Khoem Sokhem
  * Kannada (kn.po) by Prabodh C P