@@ -2,6 +2,9 @@ netcfg (1.74) UNRELEASED; urgency=low
 
   * Team upload
 
+  [ Gaudenz Steinlin ]
+  * Fix link detection progress bar.
+
   [ Sorina Sandu ]
   * Make link detection timeout preseedable.
     (Closes: #610752)
